etc/k8s/06-ingress-opencode.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencode-ingress-nginx
  namespace: opencode-ns
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/proxy-body-size: 8m
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gawin.io
      secretName: jsc-home-certificate
  rules:
    - host: gawin.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: jsc-opencode-web
                port:
                  number: 4096
